# vaultdb

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.cache/clangd/index/: bloom_filter.cpp.69362DCDE9F8F72A.idx  bloom_filter.h.AA16690484B65D84.idx  connection.cpp.D14160DE979A75FC.idx  connection.h.F5410C345F9C7858.idx  lru_cache.h.FCA677918BF09CB0.idx  lsm_engine.cpp.E3F5AB2D0C622748.idx  lsm_engine.h.2752125D9198C2AE.idx  main.cpp.43621F5A4A13AA5B.idx  memtable.cpp.907B96F9FD0A2374.idx  memtable.h.2C53D57CF2E6CE0A.idx  parser.cpp.5CD938135638B034.idx  parser.h.AA5531A112FB7C29.idx  server.cpp.8C6716F59A862242.idx  server.h.687CC865B0372536.idx  sstable.cpp.612BBE2F788B18F1.idx  sstable.h.CBEC14474B51408D.idx  test_bloom_filter.cpp.6182C6D47980F2AB.idx  test_lru_cache.cpp.7634CAED3A42A849.idx  test_lsm_engine.cpp.5D8C40E4D6712B34.idx  test_memtable.cpp.97E852B74B1D3E3F.idx  test_sstable.cpp.45B2B4CDF940E207.idx  test_wal.cpp.3FDA018C7C24BAEB.idx  wal.cpp.02E01B9E074FA700.idx  wal.h.CA9D212C7B3180D8.idx
api/: dashboard_api.py
benchmark/: client.py  run_benchmark.sh
cli/: vault_cli.py
dashboard/: package-lock.json
dashboard/public/: results.json
dashboard/src/: App.jsx  index.css
dashboard/src/components/: BloomFilter.css  BloomFilterVisualizer.jsx  WebTerminal.css  WebTerminal.jsx
docs/demo/: interview_demo.md
docs/study/: 01_cpp_beyond_dsa.md  02_memory_and_pointers.md  03_concurrency.md  04_file_io.md  05_networking.md  06_data_structures.md  07_architecture.md  08_interview_questions.md  README.md
src/: main.cpp
src/cache/: lru_cache.h
src/engine/: bloom_filter.cpp  bloom_filter.h  lsm_engine.cpp  lsm_engine.h  memtable.cpp  memtable.h  sstable.cpp  sstable.h  wal.cpp  wal.h
src/protocol/: parser.cpp  parser.h
src/server/: connection.cpp  connection.h  server.cpp  server.h
tests/: test_bloom_filter.cpp  test_lru_cache.cpp  test_lsm_engine.cpp  test_memtable.cpp  test_sstable.cpp  test_wal.cpp
